# EOPlatform

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  test.ipynb  testing.ipynb
.github/workflows/: lint.yml
eoplatform/: __init__.py  __main__.py  autoImport.py  auto_import.py  baseClasses.py  cli.py  factory.py  main.py  platform.py  sharedClasses.py  utils.py
eoplatform/composites/: __init__.py  baseClasses.py  classes.py  composites.py  factory.py  generator.py  interface.py  safe_eval.py  visualizers.py
eoplatform/data/composites/: ARI.json  ARVI.json  ATSAVI.json  AWEInsh.json  AWEIsh.json  BAI.json  BAIS2.json  BNDVI.json  BWDRVI.json  CIG.json  CIRE.json  CSIT.json  CVI.json  DVI.json  EBBI.json  EVI.json  EVI2.json  ExG.json  GARI.json  GBNDVI.json  GDVI.json  GEMI.json  GLI.json  GNDVI.json  GRNDVI.json  GVMI.json  IRECI.json  MCARI.json  MCARI1.json  MCARI2.json  MGRVI.json  MNDVI.json  MNDWI.json  MNLI.json  MSAVI.json  MSR.json  MTCI.json  MTVI1.json  MTVI2.json  NBR.json  (+52 more)
eoplatform/download/: downloadControl.py
eoplatform/info/: infoControl.py  visualizers.py
eoplatform/metadata/: __init__.py  metadata.py
