[tool.poetry]
name = "eoplatform"
version = "0.1.0"
description = "Earth Observation made easy."
authors = ["Matthew Tralka <matthew@tralka.xyz>"]
maintainers = ["Matthew Tralka <matthew@tralka.xyz>"]
license = "GPL-3.0-only"
repository = "README.md"
keywords = ["remote sensing", "earth observation", "gis", "education"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.12.0"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
notebook = "^6.4.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eoplatform = 'eoplatform.cli:app'
